--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="body-bg"></div>
     <div class="container">
         <div class="container-data">
-            <div><button onclick="myFunction()" id="demo">Click me</button></div>
+            <div><button onclick="myFunction()" id="demo">Hit me</button></div>
         </div>
     </div>
 </body>
